--- a/label_frontend/package.json
+++ b/label_frontend/package.json
@@ -9,8 +9,8 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-dropzone": "^14.2.3",
-    "react-image-annotate": "^1.8.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
