--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,27 @@
 absl-py==2.0.0
+amqp==5.2.0
 asgiref==3.7.2
+async-timeout==4.0.3
+billiard==4.2.0
 boto3==1.28.67
 botocore==1.31.67
 cachetools==5.3.1
+celery==5.3.4
 certifi==2022.12.7
 chardet==4.0.0
 charset-normalizer==3.3.0
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 contourpy==1.1.1
+cron-descriptor==1.4.0
 cycler==0.10.0
 Django==4.2.6
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
 django-cors-headers==4.3.0
+django-timezone-field==6.0.1
 djangorestframework==3.14.0
 filelock==3.12.4
 fire==0.5.0
@@ -28,6 +39,7 @@ importlib-resources==6.1.0
 Jinja2==3.1.2
 jmespath==1.0.1
 kiwisolver==1.4.5
+kombu==5.3.3
 Markdown==3.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
@@ -40,6 +52,7 @@ opencv-python-headless==4.8.0.74
 packaging==23.2
 pandas==2.1.1
 Pillow==10.1.0
+prompt-toolkit==3.0.39
 protobuf==4.23.4
 psutil==5.9.6
 py-cpuinfo==9.0.0
@@ -47,10 +60,12 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pybboxes==0.1.6
 pyparsing==2.4.7
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
@@ -78,6 +93,8 @@ typing_extensions==4.8.0
 tzdata==2023.3
 ultralytics==8.0.202
 urllib3==1.26.18
+vine==5.1.0
+wcwidth==0.2.9
 Werkzeug==3.0.0
 yolov5==7.0.13
 yolov8==0.0.2
